# Audeobox-link

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.json
.github/workflows/: build-and-release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: package.sh
